--- a/ClassEx01.html
+++ b/ClassEx01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>    
     <head>
-        <title>Class Exercise 01</title>>
+        <title>Class Exercise 01</title>
     <head>
 
     <body>
