--- a/Ex02c/Register.html
+++ b/Ex02c/Register.html
@@ -8,12 +8,12 @@
 <body>
     <div class="container">
         <header id="mainHeader">
-            Need an account?
+            Have an account?
             <a href="signinForm.html"> Login</a>
         </header>
 
         <section>
-            <form onsubmit="alert(name.value);return false">
+            <form onsubmit="alert(nameName.value);return false">
                 
                 <div id="formData">
                     <!-- Name Field Start-->
