--- a/Ex02c/signinForm.html
+++ b/Ex02c/signinForm.html
@@ -20,7 +20,7 @@
 
                     </div>
                     <input type="text" name="userName">
-                    <div class="label">
+                    <div class="signinLabel">
                         <label>Password</label>
 
                     </div>
