--- a/Ex02c/signinForm.html
+++ b/Ex02c/signinForm.html
@@ -9,7 +9,7 @@
     <div class="container">
         <header id="mainHeader">
             Need an account?
-            <a href="register.html"> Register</a>
+            <a href="Register.html"> Register</a>
         </header>
 
         <section>
