--- a/Ex02c/Register.html
+++ b/Ex02c/Register.html
@@ -3,7 +3,7 @@
 <head>
 
     <title>Registration</title>
-    <link rel="stylesheet" href="stylesSR.css">
+    <link rel="stylesheet" href="StylesSR.css">
 </head>
 <body>
     <div class="container">
