--- a/Ex02c/signinForm.html
+++ b/Ex02c/signinForm.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Sign In</title>
-    <link rel="stylesheet" href="stylesSR.css">
+    <link rel="stylesheet" href="StylesSR.css">
     
 </head>
 <body>
