--- a/Ex02c/Register.html
+++ b/Ex02c/Register.html
@@ -13,7 +13,7 @@
         </header>
 
         <section>
-            <form onsubmit="alert(nameName.value);return false">
+            <form onsubmit="alert(firstName.value);return false">
                 
                 <div id="formData">
                     <!-- Name Field Start-->
