--- a/Class Ex.07a/Class Ex07a.html
+++ b/Class Ex.07a/Class Ex07a.html
@@ -66,7 +66,7 @@ as it is being used to layout other elements of the page.
             </div>
             <!-- Seen when Class Exercise Link is clicked. -->
             <div id="divLeft_CELinks">
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 01")'>Class Exercise 01</a><br>
+                <a href='https://stef2nn.github.io/ITC-111/Exercise%2008%20Calculator/calculator.html' target='blank' class='divLeftLinks' onclick='changeDivRightText("Class Ex 01")'>Class Ex - Calculator </a><br>
                 <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
             </div>
             <!-- Seen when Assignments Link is clicked. -->
