--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ as it is being used to layout other elements of the page.
             <!-- Seen when Class Exercise Link is clicked. -->
             <div id="divLeft_CELinks">
                 <a href='https://stef2nn.github.io/ITC-111/Exercise%2008%20Calculator/calculator.html' target='_blank' class='divLeftLinks' onclick='changeDivRightText("Class Ex 01")'>Class Ex - Calculator </a><br>
-                <a href='#' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Exercise 02</a><br>
+                <a href='https://stef2nn.github.io/ITC-111/ToDoList/index.html' class='divLeftLinks' onclick='changeDivRightText("Class Ex 02")'>Class Ex - To Do List</a><br>
             </div>
             <!-- Seen when Assignments Link is clicked. -->
             <div id="divLeft_ALinks">
